--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
   <br/><br/>
 
   <div if.bind="columns">
-    <h2>readExtraColumns() for ${this.file.name} took ${extraTime} ms.</h2>
+    <h2>readExtraColumns() for ${file.name} took ${extraTime} ms.</h2>
     <h3>Columns:</h3>
     <div repeat.for="column of columns">${column}</div>
   </div>
